# daily-compprog

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: codeforces.rs  daily_messages.rs  main.rs  options.rs  scheduled_service.rs  telegram_bot.rs  telegram_bot_service.rs  util.rs
src/scheduler/: controller.rs  daily_message.rs  mod.rs  updater.rs  util.rs
src/telegram_bot/: channel_state.rs  controller.rs  dispatcher.rs  mod.rs
