[package]
name = "daily-compprog"
version = "0.1.0"
edition = "2021"
description = "My program! (TODO: Edit this description)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
miette = { version = "5", features = ["fancy"]}
chrono = "0.4.22"
teloxide = { version = "0.11.2", default-features = false, features = ["macros", "throttle", "rustls", "ctrlc_handler"] }

# Logging
env_logger = "0.9"
log = "0.4"

# Tokio
tokio = { version = "1", features = ["full"] }
tokio-graceful-shutdown = "0.11.1"

# Async libraries
async-cron-scheduler = "1.0.0"

# Command line arguments
clap = { version = "4.0", features = ["derive"] }

[features]
persistent-storage = []
