[package]
name = "daily-compprog"
version = "0.2.0"
edition = "2021"
description = "Telegram bot to send daily comp prog messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
miette = { version = "5", features = ["fancy"] }
chrono = "0.4.22"
teloxide = { version = "0.12.2", default-features = false, features = ["macros", "throttle", "rustls", "ctrlc_handler"] }
xorshift = "0.1.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.10.0"
log = "0.4"

# Tokio
tokio = { version = "1", features = ["full"] }
tokio-graceful-shutdown = "0.12.1"

# Reqwest
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
governor = "0.5"

# Async libraries
futures = "0.3"
async-cron-scheduler = "1.0.0"

# Command line arguments
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["persistent"]
persistent = ["teloxide/redis-storage"]
